Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6096

sanity test_17m: e2fsck Inode 32775, i_size is 0, should be 4096

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.8.0
    • Lustre 2.7.0
    • 3
    • 16971

      This issue was created by maloo for Bob Glossman <bob.glossman@intel.com>

      This issue relates to the following test suite run of review-ldiskfs: https://testing.hpdd.intel.com/test_sets/277e606e-976d-11e4-bafa-5254006e85c2.

      I note that several other recent similar failures have been marked as LU-3534.
      As I'm unsure of the reasoning for that and this one is seen on el7 I've raised it as new.
      Somebody more expert may decide it's a dup after looking it over.

      The sub-test test_17m failed with the following error:

      e2fsck -fnvd /dev/lvm-Role_MDS/P1
      e2fsck 1.42.12.wc1 (15-Sep-2014)
      shadow-26vm8: check_blocks:2814: increase inode 32775 badness 0 to 1
      shadow-26vm8: check_blocks:2814: increase inode 32776 badness 0 to 1
      Pass 1: Checking inodes, blocks, and sizes
      Inode 32775, i_size is 0, should be 4096.  Fix? no
      
      Inode 32776, i_size is 0, should be 4096.  Fix? no
      

      Please provide additional information about the failure here.

      Info required for matching: sanity 17m

            bzzz Alex Zhuravlev
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: